fixing select on safari

--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,6 @@
     margin-left: 0.8em;
     font-size: 1.5vh;
     padding: 0.3em;
-    background-color: grey;
-    border: 1px solid black;
-    border-radius: 10px;
 }
 
 #middle {
