--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -27,6 +27,7 @@
 #form select {
     padding: 0.4em;
     width: 100%;
+    color: black;
 }
 
 #form input.focused {
